PROJECT(RTSP2RTMP)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_FLAGS "-Wall -Wno-unused-variable -std=c99")
SET(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wno-unused-variable")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -O0 -g")
SET(CMAKE_C_FLAGE_RELEASE "${CMAKE_C_FLAGS} -O3 -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -Wall")

FIND_PACKAGE(Libavformat)
FIND_PACKAGE(Libavutil)

SET(RTSP2RTMP_LIB ${AVUTIL_LIBRARY} ${AVFORMAT_LIBRARY})
INCLUDE_DIRECTORIES(${AVUTIL_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR})

SET(RTSP2RTMP_SRC main.cpp)

ADD_EXECUTABLE(RTSP2RTMP ${RTSP2RTMP_SRC})
TARGET_LINK_LIBRARIES(RTSP2RTMP ${RTSP2RTMP_LIB})
